--- a/component-excercise/src/App.css
+++ b/component-excercise/src/App.css
@@ -1,38 +1,76 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.mainPost {
+    border: solid #282c34;
+    width: 1200px;
+    margin: 5px;
+    /* display: grid;
+    grid-template-columns: "repeat(2, 1fr)";
+    grid-gap: 20; */
+}
+
+.column {
+    float: left;
+    padding: 0 10px;
+}
+
+.mainPost:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.imageMainPost {
+    display: inline-flex;
+    width: 300px;
+    height: 200px;
+}
+
+.titleMainPost {
+    display: inline-flex;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.descriptionMainPost {
+    display: inline-flex;
+    font-size: 14px;
 }
