--- a/component-excercise/src/App.css
+++ b/component-excercise/src/App.css
@@ -42,14 +42,7 @@
     border: solid #282c34;
     width: 1200px;
     margin: 5px;
-    /* display: grid;
-    grid-template-columns: "repeat(2, 1fr)";
-    grid-gap: 20; */
-}
-
-.column {
-    float: left;
-    padding: 0 10px;
+    display: flex;
 }
 
 .mainPost:after {
@@ -60,8 +53,14 @@
 
 .imageMainPost {
     display: inline-flex;
+    flex: 50%;
     width: 300px;
-    height: 200px;
+    height: 240px;
+    flex: 30%;
+}
+
+.contentMainPost {
+    flex: 70%;
 }
 
 .titleMainPost {
